--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
     "files": [],
-    "references": {
-        "packages": [
-            {"path": "./client_app"},
-            {"path": "./packages/api"},
-            {"path": "./packages/ui_library"}
-        ]
-    }
+    "references": [
+        {"path": "./client_app"},
+        {"path": "./packages/api"},
+        {"path": "./packages/ui_library"}
+    ]
 }
