--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,5 +4,8 @@
   "private": true,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^4.5.5"
+  }
 }
